--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="wrapper">
     <div class="greeting">
-      <audio controls src="/mp3/HappyBirthday.mp3"></audio>
+      <audio autoplay src="./mp3/HappyBirthday.mp3"></audio>
       <p id="message"></p>
     </div>
   </div>
