--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="wrapper">
     <div class="greeting">
-      <audio autoplay src="./HappyBirthday.mp3"></audio>
+      <audio autoplay src="https://ia601400.us.archive.org/28/items/happy-birthday_202203/HappyBirthday.mp3?cnt=0"></audio>
       <p id="message"></p>
     </div>
   </div>
